메뉴관리 수정

--- a/PodoDemo/PodoDemo.csproj
+++ b/PodoDemo/PodoDemo.csproj
@@ -19,6 +19,20 @@
     <Content Include="wwwroot\images\Login\login_logo.png" />
     <Content Include="wwwroot\images\Login\login_text.png" />
     <Content Include="wwwroot\images\Menu\logo.png" />
+    <Content Include="wwwroot\js\bootstrap332\css\bootstrap-theme.css" />
+    <Content Include="wwwroot\js\bootstrap332\css\bootstrap-theme.css.map" />
+    <Content Include="wwwroot\js\bootstrap332\css\bootstrap-theme.min.css" />
+    <Content Include="wwwroot\js\bootstrap332\css\bootstrap.css" />
+    <Content Include="wwwroot\js\bootstrap332\css\bootstrap.css.map" />
+    <Content Include="wwwroot\js\bootstrap332\css\bootstrap.min.css" />
+    <Content Include="wwwroot\js\bootstrap332\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="wwwroot\js\bootstrap332\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="wwwroot\js\bootstrap332\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="wwwroot\js\bootstrap332\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="wwwroot\js\bootstrap332\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="wwwroot\js\bootstrap332\js\bootstrap.js" />
+    <Content Include="wwwroot\js\bootstrap332\js\bootstrap.min.js" />
+    <Content Include="wwwroot\js\bootstrap332\js\npm.js" />
     <Content Include="wwwroot\js\jqwidgets\styles\images\Menu.cshtml" />
     <Content Include="wwwroot\js\Common.js" />
     <Content Include="wwwroot\js\jquery-3.2.1.min.js" />
