--- a/ErrorAPI/Web.config
+++ b/ErrorAPI/Web.config
@@ -13,7 +13,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="podocrmDB" connectionString="Data Source=115.68.114.144;Initial Catalog=PODO_CRM_CM;User ID=crmhost_sa;Password=mscrm@1021"
+    <add name="podocmDB" connectionString="Data Source=115.68.114.144;Initial Catalog=PODO_CRM_CM;User ID=crmhost_sa;Password=mscrm@1021"
       providerName="system.data.sqlclient"/>
     <add name="podoDemoDB" connectionString="Server=tcp:pododb.database.windows.net,1433;Initial Catalog=PodoDemoN;Persist Security Info=False;User ID=podoAdmin;Password=xmfn!@2017;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
           providerName="system.data.sqlclient" />
